--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,9 @@ name = "pypi"
 [packages]
 django = "==3.0.1"
 django-crispy-forms = "==1.8.1"
+whitenoise = "==4.1.4"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.6"
